# study0309

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  smart_environment_house_plan.md  test.c  test.out
atmega128/: CMakeLists.txt  CMakeLists_temp.txt  Makefile  compile_commands.json
atmega128/lib/lcd/: lcdconf.h
atmega128/src/: cds.c  cds2.c  dc_motor.c  dc_pwm.c  interrupt1.c  interrupt_fnd.c  lcd1.c  led3.c  led4.c  pwmServoSwitch.c  pwmled.c  pwmservo.c  switch1.c  switch2.c  switch_fnd.c  timer0led.c  timer1com.c  uart3.c
bowlingGame/: CMakeLists.txt  bowling.h  test3.c  test4.c
c/: README.md
c/basics/: README.md
c/basics/part1/: README.md  alphabet.c  bigLetter.c  celsius2Fahr.c  charNumber.c  compare2.c  fahr2Celcius.c  fourbit.c  fourbit2.c  genderRatio.c  increment.c  literal.c  makefile_temp  makefile_temp2  oddEven.c  sizeof.c
c/basics/part2/: A2Z.c  README.md  a2bSum.c  absoluteValue.c  dice.c  dice2.c  findMax.c  lotto.c  multiply.c  one2TenSum.c  one2TenSumWhile.c  one2TenWhile.c  oneToTenFor.c  passFail.c  passFail2.c  posZeroNeg.c  scoreGrade.c  scoreGradeSwitch.c  star2.c  sumArray.c  xstar.c
c/basics/part3/: CMakeLists.txt  README.md  add.c  arrayAssignment.c  arraycompare.c  localVariable.c  makefile  pointer1.c  pointer2.c  pointer3.c  pointer5_functionpointer.c  pointer6_voidpointer.c  pointerAndArray  pointerAndArray.c  pointerAndArray2.c  qsort.c  selectionSorting.c  swap.c
c/basics/part4/: README.md
c/basics/part4/baseballGame/: CMakeLists.txt  baseball.c  main.c
c/basics/part4/carSerial/: CMakeLists.txt  main.c  makefile  serial.c  serial.h
c/basics/part4/myRandom/: CMakeLists.txt  main.c  myRandom.c  myRandom.h
c/basics/part5/: README.md  charGetPut.c  charGetPut2.c  charGetPut3.c  string3.c  struct.c  struct2.c  struct3_twoint.c  struct4.twoDouble.c  unionExample.c
c/basics/part5/date/: CMakeLists.txt  date.c  date.h  main.c
c/basics/part5/twoDouble/: CMakeLists.txt  main.c  twoDouble.h
c/basics/part6/: README.md  dynamicAllocation.c  dynamicAllocation2.c  fileDescriptor.c  filePointer.c
c/basics/part6/scoreProcess/: main.c  scoreProcess.c
c/ds/: README.md
c/ds/list/: README.md
c/ds/queue/: README.md  queue1  queue1.c
c/ds/queue/myQueue1/: CMakeLists.txt  main.c  queue.c  queue.h
c/ds/queue/myQueue3/: CMakeLists.txt  queue3.c
c/ds/stack/: README.md  stack1.c
c/ds/stack/myStack1/: CMakeLists.txt  main.c  stack.c  stack.h
c/ds/stack/myStack2/: CMakeLists.txt  main.c  stack2.c  stack2.h
c/ds/stack/myStack3/: CMakeLists.txt  main.c  stack3.c  stack3.h
c/ds/stack/myStack4/: CMakeLists.txt
c/projects/: README.md
c/projects/bowlingGame/: README.md  bowling.c  bowling.h  main.c  test1.c  test2.c  test4.c
c_example/: compare  compare.c  hello.c  limit  limit.c  oddEven  stringCopy  stringCopy.c  triangle  triangle.c
c_example/part2/: arrayInit  arrayInit.c  dice2  findMax  findMax.c  lotto  multiply  star.c  star2  sumArray  sumMatrix  sumMatrix.c  xstar
c_example/part3/: CMakeLists.txt  add  pointer3  pointerAndArray2
c_example/part4/baseballGame/: baseball.h  main
c_example/part5/: charGetPut  charGetPut2  charGetPut3  charGetPut4  charGetPut4.c  enumExample  enumExample.c  selfReference.c  string3  stringExample  stringExample.c  structArray.c
c_example/part6/: dynamicAllocation  dynamicAllocation.c  dynamicAllocation4.c  fileDescriptor  fileDescriptor.c  filePointer  variableLengthArray  variableLengthArray.c
c_example/part6/scoreProcess/: CMakeLists.txt  main.c  scoreProcess.c  scoreProcess.h
cpp/: README.md
cpp/practice/test01/: b.c  b.h  main.c
cpp_code/notes/: README.md
cpp_code/practice/: README.md
cpp_code/practice/chap01/: 00_hello_world  00_hello_world.cpp
cpp_code/practice/chap02/: challenge01  challenge01.cpp  ex2_2  ex2_2.cpp  ex2_3  ex2_3.cpp  ex2_4  ex2_4.cpp  ex2_4_func  ex2_4_test  ex2_4_test.cpp  ex2_5.cpp
cpp_code/practice/chap02/Practice03/: Practice03_string  Practice03_string.cpp  Practice03_string_arg  Practice03_string_arg.cpp
cpp_code/practice/chap02/ex2_4_src/: ex2_4_func.cpp  ex2_4_malloc.cpp
cpp_code/practice/chap02/namespace/: Makefile  kitae.cpp  kitae.h  main.cpp  mike.cpp  mike.h
cpp_code/practice/chap03/: ex3_1  ex3_1.cpp  ex3_2  ex3_2.cpp  ex3_3.cpp
cpp_code/practice/chap03/quiz/: q01.cpp  q02.cpp  q03.cpp  q04  q04.cpp  q05  q05.cpp  q06  q06.cpp  q07  q07.cpp  q08  q08.cpp  q09  q09.cpp  q10.cpp
cpp_code/practice/chap04/: Practice01  Practice01.cpp  ex4_1.cpp  ex4_11  ex4_11.cpp  ex4_2  ex4_2.cpp
cpp_code/practice/chap04/quiz/: q01  q01.cpp  q02  q02.cpp  q03  q03.cpp  q04  q04.cpp  q05  q05.cpp
cpp_code/practice/chap05/: ex3_5_cpy.cpp  ex5_11.cpp  ex5_12.cpp  ex5_1_adress  ex5_1_adress.cpp  ex5_1_refn  ex5_1_refn.cpp  ex5_1_value  ex5_1_value.cpp  ex5_9.cpp  ex_book.cpp
cpp_code/practice/chap05/quiz/: q01  q01.cpp  q02  q02.cpp  q03  q03.cpp  q03_pointer  q03_pointer.cpp  q04  q04.cpp  q04_pointer  q04_pointer.cpp  q05  q05.cpp  q06  q06.cpp  q07  q07.cpp  q08.cpp  q09  q09.cpp  q11  q11_resize.cpp  q11_resize2.cpp  q14  q14.cpp
cpp_code/practice/ctocpp/: q07  q07.cpp  q08  q08.cpp  q09  q09.cpp  q10  q10.cpp
cpp_code/practice/test01/: Makefile  a.c  a.h  main  main.c
doc/: README.md  cmake사용법.md  kuhrd_c_notes_archive.md  node_a_environment_sensor_guide.md  node_b_actuator_control_guide.md  node_c_central_manager_guide.md  smart_house_team_workflow.md
ds/queue/myQueue3/: main.c  queue3.h
ds/stack/: stack1
embedded/: README.md
embedded/atmega128/: README.md  compile_commands.json
embedded/atmega128/src/: buzzermario.c  cds_fnd.c  dc_pwm_vr.c  external_eeprom.c  fnd1.c  fnd2.c  i2c_tempHumi.c  led2.c  pir.c  pwmbuzzer.c  timer2ledleftright.c  uart1.c  uart2.c
embedded/network/: README.md  mqttPub.c
embedded/pico/: CMakeLists.txt  README.md  project_ex.md
embedded/pico/src/: buzzermario.c  dht22_mqtt.c
network/: CMakeLists.txt  mqttPub.c
network /: mqttPub  mqttPub.c  mqttPub2  mqttPub2.c
pico/: CMakeLists.txt  compile_commands.json
pico/src/: blink.c
pico/src/mqtt/: mqtt_client.c
(+10 files in other folders)
